# p3-ir-camera

./: .gitignore  LOCK-IN.md  P3_PROTOCOL.md  README.md  lock-in.md  lockin.py  p3_camera.py  p3_camera_test.py  p3_viewer.py  p3_viewer_test.py  pyproject.toml  touchdesigner_spout_bridge.py  touchdesigner_spout_bridge_test.py
